# stm32f103zet6demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cmake/: def_config.cmake  firmware.cmake  gpio_config.cmake
aiko-demo/: CMakeLists.txt
aiko-demo/include/func_test/: usart_test.h
aiko-demo/include/hardware/: beep.h
aiko-demo/include/lower/: spi.h  usart.h
aiko-demo/source/func_test/: usart_test.c
aiko-demo/source/hardware/: beep.c
aiko-demo/source/initialzation/: aiko-demo.c
aiko-demo/source/lower/: usart.c
demo1/: CMakeLists.txt  config.h.in  main.c
demo10/: ANSI-term.h  CMakeLists.txt  main.c
demo2/: CMakeLists.txt  config.h.in  main.c
demo3/: CMakeLists.txt  ToMorse.hs  config.h.in  main.c
demo4/: CMakeLists.txt  config.h.in  main.c
demo5/: CMakeLists.txt  main.c
demo5/demo1/: config.h  demo1.elf
demo5/demo2/: config.h
demo5/demo3/: config.h
demo5/demo4/: config.h
demo6/: CMakeLists.txt  main.c
demo7/: CMakeLists.txt  main.c
demo8/: CMakeLists.txt  media.c  source.c
demo9/: CMakeLists.txt  main.c
demol1/: CMakeLists.txt  main.c
firmware/: stm32f10x_conf.h.in
or-demo/: CMakeLists.txt  delay.c  delay.h  main.c  type.h
or-demo/hardware/irda/: irda.c  irda.h
or-demo/hardware/oled/: codetab.c  codetab.h  oled.c  oled.h
or-demo/hardware/spker/: frame.c  frame.h  usart_trans.c  usart_trans.h
stm32f103zet6/source/: misc.c
